--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ generateJava {
 	includeQueries = ["athlete"]
 	generateClient = true
 	generateDataTypes = true
+	
+	// Custom scalar mapping for MacAddress
+	typeMapping = [
+		"MacAddress": "com.alesmontaldo.network_controller.domain.device.MacAddress"
+	]
 }
 
 tasks.register('clientRun', JavaExec) {
@@ -48,18 +53,6 @@ tasks.register('clientRun', JavaExec) {
 tasks.register('clientDgsRun', JavaExec) {
 	classpath = sourceSets.main.runtimeClasspath
 	mainClass = 'com.alesmontaldo.network_controller.ClientDgsApp'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
-
-generateJava {
-	schemaPaths = ["${projectDir}/src/main/resources/graphql"]
-	packageName = 'com.alesmontaldo.network_controller.codegen'
-	includeQueries = ["athlete"]
-	generateClient = true
-	generateDataTypes = true
 }
 
 tasks.named('test') {
