in memory repo added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: "network-controller"
 
+  profiles:
+    active: default
+
   data:
     mongodb:
       host: localhost
@@ -11,6 +14,7 @@ spring:
       password: supersecret
       authentication-database: admin
 
+  #TODO: keep?
   threads:
     virtual:
       enabled: true
@@ -24,3 +28,15 @@ logging:
     com.alesmontaldo.network_controller: DEBUG
     org.springframework.graphql: DEBUG
     org.springframework.graphql.data.method.annotation.support.AnnotatedControllerConfigurer: TRACE
+
+---
+spring:
+  profiles:
+    active: in-memory
+
+# TODO remove here
+#spring:
+#  config:
+#    activate:
+#      on-profile: in-memory
+  # No MongoDB configuration needed for in-memory profile
