--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 version = 1.0.0-SNAPSHOT
 
-spring_boot_version = 3.3.12
-spring_dependency_management_version = 1.1.6
-
-dgs_codegen_version = 6.1.10
+# dependencies outside of spring boot
+graphql_java_extended_scalars_version = 22.0
 mapstruct_version = 1.5.3.Final
 
 # gradle plugin
+spring_boot_version = 3.3.12
+spring_dependency_management_version = 1.1.6
+dgs_codegen_version = 8.1.0
 gradle_graalvm_plugin = 0.10.6
