--- a/build.gradle
+++ b/build.gradle
@@ -38,12 +38,12 @@ dependencies {
 generateJava {
 	schemaPaths = ["${projectDir}/src/main/resources/graphql"]
 	packageName = 'com.alesmontaldo.network_controller.codegen'
-	//TODO keep this?
-	generateClient = true
+	generateClient = true  //TODO keep this?
 	generateDataTypes = true
 	generateInterfaceMethodsForInterfaceFields = true
 	typeMapping = [
-		"MacAddress": "com.alesmontaldo.network_controller.domain.device.MacAddress"
+		"MacAddress": "com.alesmontaldo.network_controller.domain.device.MacAddress",
+		"JSON": "java.lang.Object"
 	]
 }
 
