--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ apply plugin: "org.graalvm.buildtools.native"
 graalvmNative {
 	binaries {
 		main {
-			imageName = "${project.name}"
+			imageName = "network-controller"
 			sharedLibrary = false
 		}
 	}
