--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: "network-controller"
 
-  profiles:
-    active: in-memory
+#  profiles:
+#    active: in-memory
 
   data:
     mongodb:
